PROD-9-26-19/force-app/main/default/objects/PFG_CRM_Review_Snapshot__c/PFG_CRM_Review_Snapshot__c.object-meta.xml
<CustomObject>
    <label>PFG CRM Review Snapshot</label>
    <nameField>
        <displayFormat>PCR-{00000000}</displayFormat>
        <label>PFG CRM Review Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PFG CRM Review Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>