PROD-9-26-19/force-app/main/default/objects/PFG_CRM_Review_Snapshot__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <label>Assigned</label>
    <length>100</length>
    <type>Text</type>
</CustomField>