PROD-9-26-19/force-app/main/default/objects/PFG_CRM_Review_Snapshot__c/fields/Reporting__c.field-meta.xml
<CustomField>
    <fullName>Reporting__c</fullName>
    <label>Reporting Country/Region</label>
    <length>250</length>
    <type>Text</type>
</CustomField>