PROD-9-26-19/force-app/main/default/objects/PFG_CRM_Review_Snapshot__c/fields/RIA__c.field-meta.xml
<CustomField>
    <fullName>RIA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RIA</label>
    <type>Checkbox</type>
</CustomField>