PROD-9-26-19/force-app/main/default/objects/PFG_CRM_Review_Snapshot__c/fields/US_Canada_Europe_UK_Region__c.field-meta.xml
<CustomField>
    <fullName>US_Canada_Europe_UK_Region__c</fullName>
    <label>US/Canada/Europe/UK Region</label>
    <length>250</length>
    <type>Text</type>
</CustomField>